# solar_blocks

./: README.md  pyproject.toml
solar_blocks/: hooks.py  modules.txt
solar_blocks/fixtures/: custom_field.json
solar_blocks/override/: api.py  bos.py  branch.py  contract_sign_doc.py  email_queue.py  error_log.py  lead.py  opportunity.py  project.py  proposal.py  quotation.py  schedulers.py  task.py  user.py
solar_blocks/public/js/: Task.js  branch.js  contract_sign_doc.js  contracts.js  lead.js  lead_list.js  opportunity.js  project.js  proposal.js  quotation.js  site_visit.js  task.js
solar_blocks/solar_blocks/dashboard_chart/appointment_scheduled/: appointment_scheduled.json
solar_blocks/solar_blocks/dashboard_chart/call_at_later_date/: call_at_later_date.json
solar_blocks/solar_blocks/dashboard_chart/client_lost/: client_lost.json
solar_blocks/solar_blocks/dashboard_chart/client_won/: client_won.json
solar_blocks/solar_blocks/dashboard_chart/contract_sent/: contract_sent.json
solar_blocks/solar_blocks/dashboard_chart/convert_to_opportunity/: convert_to_opportunity.json
solar_blocks/solar_blocks/dashboard_chart/lead/: lead.js  lead.json
solar_blocks/solar_blocks/dashboard_chart/lead_disqualified/: lead_disqualified.json
solar_blocks/solar_blocks/dashboard_chart/leads/: leads.json
solar_blocks/solar_blocks/dashboard_chart/maxfit_completed/: maxfit_completed.json
solar_blocks/solar_blocks/dashboard_chart/not_interested/: not_interested.json
solar_blocks/solar_blocks/dashboard_chart/opportunity/: opportunity.json
(+259 files in other folders)
